--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_APP_DOMAIN=your-app-domain
-NEXT_PUBLIC_DOMAIN=your-landing-page-domain
+NEXT_PUBLIC_APP_DOMAIN=https://app.pumpvolt.fun
+NEXT_PUBLIC_DOMAIN=https://www.pumpvolt.fun
